# prosty-planer

./: .gitignore  index.html  landing-v050.html  package-lock.json  package.json  planer-v050.html  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: ai-assistant.ts  ai-sidebar.ts  auth.ts  cenniki.ts  currency.ts  danger-modal.ts  dashboard.ts  detail-page.ts  excel-ai-import.ts  excel-reader.ts  inline-edit.ts  kategorie.ts  klienci.ts  main.ts  materialy.ts  materialy.ts.bak  mojafirma.ts  offers.ts  offers.ts.backup  pdf-export.ts  products.ts  robocizny.ts  store-trade.ts  store.ts  styles.css  types.ts  ui.ts  updater.ts  ustawienia.ts  wizard.ts  xlsx-shim.d.ts  zlecenia.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
